--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  
+<main>
   <div class="card">
     <img src="./images/image-qr-code.png">
     <div id="ot">
@@ -27,5 +27,6 @@
     </div>
     
   </div>
+</main>  
 </body>
 </html>
